Volume Time Indicator Readability Fix

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ button:active {
   font-size: 26px;
   padding: 200px 0 0;
   text-align: center;
-  width: 170px;
+  width: 200px;
   height: 50px;
   
 }
